--- a/src/BookStore.css
+++ b/src/BookStore.css
@@ -9,6 +9,26 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: rgb(46, 40, 40);
     color: #fff;
+}
+h1{
+    color: red;
+    font: bolder;
+}
+h4{
+    color:yellow;
+    font: italic;
+}
 
+.List{
+    width: 90vw;
+    max-width: 1170px;
+    margin: 5rem auto;
+    display: grid;
+    gap: 2rem;
+}
+@media screen and (min-width:768) {
+    .List{
+        grid-template-columns: repeat(3,1fr);
+    }
     
 }
