--- a/src/BookStore.css
+++ b/src/BookStore.css
@@ -27,8 +27,16 @@ h4{
     gap: 2rem;
 }
 @media screen and (min-width:768) {
-    .List{
+.List{
         grid-template-columns: repeat(3,1fr);
     }
     
+}
+.book{
+    background: white;
+    border-radius: 1rem;
+    padding: 1rem 2rem;    
+}
+.book h1 {
+    margin-top: 0.5rem;
 }
